Nuevos cambios entidad Admin

--- a/Admin/productos-ad.html
+++ b/Admin/productos-ad.html
@@ -14,7 +14,7 @@
     <a href="home-ad.html">Inicio</a>
     <a href="productos-ad.html">Productos</a>
     <a href="usuarios.html">Usuarios</a>
-    <a href="#">Cerrar Sesión</a>
+    <a href="../Tienda/inicio.html">Cerrar Sesión</a>
   </div>
 
   <!-- Contenido principal -->
