--- a/Admin/home-ad.html
+++ b/Admin/home-ad.html
@@ -9,15 +9,14 @@
 
 <body>
 
-    <!-- Barra Lateral --->
+    <!-- Barra Lateral -->
     <div class="barra_lateral">
         <h2>Panel Administrador</h2>
         <a href="home-ad.html">Inicio</a>
-        <a href="productos-ad.html">Productos</a>
+        <a href="productos_ad.html">Productos</a>
         <a href="usuarios.html">Usuarios</a>
-        <a href="../Tienda/inicio.html" id="cerrarSesion">Cerrar Sesión</a>
+        <a href="../Tienda/inicio.html">Cerrar Sesión</a>
     </div>
-    
 
     <!-- Contenido principal -->
     <div class="mensaje">
@@ -25,4 +24,8 @@
         <p>Aquí podrás gestionar los productos y usuarios de la Pastelería Mil Sabores.</p>
     </div>
 </body>
+
 </html>
+
+
+
