--- a/Admin/productos-ad.html
+++ b/Admin/productos-ad.html
@@ -2,17 +2,16 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Productos - Admin Pastelería Mil Sabores</title>
+  <title>Productos_ad - Admin Pastelería Mil Sabores</title>
   <link rel="stylesheet" href="css/estilos.css">
-  <script src="js/productos.js"></script>
 </head>
 <body>
 
-  <!-- Menú lateral -->
+  <!-- Barra lateral -->
   <div class="barra_lateral">
     <h2>Panel Administrador</h2>
     <a href="home-ad.html">Inicio</a>
-    <a href="productos-ad.html">Productos</a>
+    <a href="productos_ad.html">Productos</a>
     <a href="usuarios.html">Usuarios</a>
     <a href="../Tienda/inicio.html">Cerrar Sesión</a>
   </div>
@@ -42,6 +41,6 @@
     </table>
   </div>
 
-  
+  <script src="js/productos_ad.js"></script>
 </body>
 </html>
